--- a/app/src/main/res/menu/menu_timeline.xml
+++ b/app/src/main/res/menu/menu_timeline.xml
@@ -1,4 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.codepath.apps.codepathtweets.activities.TimelineActivity">
 
+    <item
+        android:id="@+id/miMessage"
+        android:orderInCategory="5"
+        android:icon="@drawable/ic_email_black_48dp"
+        android:onClick="onClickMessage"
+        app:showAsAction="ifRoom"
+        android:title="message" />
+
+    <item
+        android:id="@+id/miProfile"
+        android:orderInCategory="5"
+        android:icon="@drawable/ic_person_black_48dp"
+        android:onClick="onClickProfile"
+        app:showAsAction="ifRoom"
+        android:title="profile" />
+
+    <item
+        android:id="@+id/miCompose"
+        android:orderInCategory="5"
+        android:icon="@drawable/ic_create_black_48dp"
+        android:onClick="onClickCompose"
+        app:showAsAction="ifRoom"
+        android:title="compose" />
+
+    <item
+        android:id="@+id/miSearch"
+        android:orderInCategory="5"
+        android:icon="@drawable/ic_search_black_48dp"
+        app:showAsAction="ifRoom|collapseActionView"
+        android:title="search"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
 </menu>
