--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.codepath.apps.simplecptweets.activities.DetailActivity"
+    tools:context="com.codepath.apps.codepathtweets.activities.DetailActivity"
     tools:showIn="@layout/activity_detail">
 
 
