--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,26 +5,25 @@
     android:layout_height="match_parent"
     tools:context="com.codepath.apps.codepathtweets.activities.ProfileActivity">
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:name="com.codepath.apps.twitterclient.fragments.profile.UserHeaderFragment"
-        android:id="@+id/fragmentUserHeader"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
-
-    <FrameLayout
+    <fragment
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:name="com.codepath.apps.twitterclient.fragments.profile.UserTimelineFragment"
+        android:name="com.codepath.apps.codepathtweets.fragments.UserTimelineFragment"
         android:id="@+id/fragmentUserTimeline"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/fragmentUserHeader"/>
+        tools:layout="@layout/fragment_tweets_list"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/fragmentUserHeader" />
+
+    <fragment
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:name="com.codepath.apps.codepathtweets.fragments.UserHeaderFragment"
+        android:id="@+id/fragmentUserHeader"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        tools:layout="@layout/fragment_user_header"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
