--- a/app/src/main/res/layout/fragment_user_header.xml
+++ b/app/src/main/res/layout/fragment_user_header.xml
@@ -30,4 +30,27 @@
         android:id="@+id/tvScreenName"
         android:layout_below="@+id/tvUserName"
         android:layout_alignStart="@+id/tvUserName" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/ivProfileImage"
+        android:layout_alignParentEnd="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Followers"
+            android:id="@+id/tvFollowersCount"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Followings"
+            android:id="@+id/tvFollowingCount"
+            android:layout_marginLeft="20dp"/>
+    </LinearLayout>
 </RelativeLayout>
