--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,6 +14,7 @@
         android:layout_alignParentEnd="true"
         tools:layout="@layout/fragment_tweets_list"
         android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp"
         android:layout_below="@+id/fragmentUserHeader" />
 
     <fragment
